patches/etc/iptables.rules
# Generated by iptables-save v1.4.20 on Thu Nov 17 10:02:12 2016
*security
:INPUT ACCEPT [207:131497]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [196:51755]
COMMIT
# Completed on Thu Nov 17 10:02:12 2016
# Generated by iptables-save v1.4.20 on Thu Nov 17 10:02:12 2016
*raw
:PREROUTING ACCEPT [200:131074]
:OUTPUT ACCEPT [188:51060]
:bw_raw_PREROUTING - [0:0]
:idletimer_raw_PREROUTING - [0:0]
:natctrl_raw_PREROUTING - [0:0]
-A PREROUTING -j bw_raw_PREROUTING
-A PREROUTING -j idletimer_raw_PREROUTING
-A PREROUTING -j natctrl_raw_PREROUTING
-A bw_raw_PREROUTING -m owner --socket-exists
-A idletimer_raw_PREROUTING -i eth0 -j IDLETIMER --timeout 10 --label 0 --send_nl_msg 1
COMMIT
# Completed on Thu Nov 17 10:02:12 2016
# Generated by iptables-save v1.4.20 on Thu Nov 17 10:02:12 2016
*mangle
:PREROUTING ACCEPT [194:128280]
:INPUT ACCEPT [194:128280]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [181:50559]
:POSTROUTING ACCEPT [181:50559]
:bw_mangle_POSTROUTING - [0:0]
:idletimer_mangle_POSTROUTING - [0:0]
:natctrl_mangle_FORWARD - [0:0]
-A INPUT -i eth0 -j MARK --set-xmark 0x30064/0xffffffff
-A FORWARD -j natctrl_mangle_FORWARD
-A POSTROUTING -j bw_mangle_POSTROUTING
-A POSTROUTING -j idletimer_mangle_POSTROUTING
-A bw_mangle_POSTROUTING -m owner --socket-exists
-A idletimer_mangle_POSTROUTING -o eth0 -j IDLETIMER --timeout 10 --label 0 --send_nl_msg 1
COMMIT
# Completed on Thu Nov 17 10:02:12 2016
# Generated by iptables-save v1.4.20 on Thu Nov 17 10:02:12 2016
*filter
:INPUT ACCEPT [187:125994]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [174:49859]
:bw_FORWARD - [0:0]
:bw_INPUT - [0:0]
:bw_OUTPUT - [0:0]
:bw_costly_eth0 - [0:0]
:bw_costly_shared - [0:0]
:bw_data_saver - [0:0]
:bw_happy_box - [0:0]
:bw_penalty_box - [0:0]
:fw_FORWARD - [0:0]
:fw_INPUT - [0:0]
:fw_OUTPUT - [0:0]
:fw_dozable - [0:0]
:fw_powersave - [0:0]
:fw_standby - [0:0]
:natctrl_FORWARD - [0:0]
:oem_fwd - [0:0]
:oem_out - [0:0]
:st_OUTPUT - [0:0]
:st_clear_caught - [0:0]
:st_clear_detect - [0:0]
:st_penalty_log - [0:0]
:st_penalty_reject - [0:0]
-A INPUT -j bw_INPUT
-A INPUT -j fw_INPUT
-A FORWARD -j oem_fwd
-A FORWARD -j fw_FORWARD
-A FORWARD -j bw_FORWARD
-A FORWARD -j natctrl_FORWARD
-A OUTPUT -j oem_out
-A OUTPUT -j fw_OUTPUT
-A OUTPUT -j st_OUTPUT
-A OUTPUT -j bw_OUTPUT
-A bw_FORWARD -o eth0 -j bw_costly_eth0
-A bw_INPUT -m quota2 --name globalAlert ! --quota 2097152 
-A bw_INPUT -i eth0 -j bw_costly_eth0
-A bw_INPUT -m owner --socket-exists
-A bw_OUTPUT -m quota2 --name globalAlert ! --quota 2097152 
-A bw_OUTPUT -o eth0 -j bw_costly_eth0
-A bw_OUTPUT -m owner --socket-exists
-A bw_costly_eth0 -j bw_penalty_box
-A bw_costly_eth0 -m quota2 --name eth0 ! --quota 9223372036854775807  -j REJECT --reject-with icmp-port-unreachable
-A bw_costly_shared -j bw_penalty_box
-A bw_data_saver -j RETURN
-A bw_happy_box -m owner --uid-owner 10008 -j RETURN
-A bw_happy_box -m owner --uid-owner 0-9999 -j RETURN
-A bw_happy_box -j bw_data_saver
-A bw_penalty_box -j bw_happy_box
-A fw_dozable -i lo -o lo -j RETURN
-A fw_dozable -p tcp -m tcp --tcp-flags RST RST -j RETURN
-A fw_dozable -m owner --uid-owner 0-9999 -j RETURN
-A fw_dozable -j DROP
-A fw_powersave -i lo -o lo -j RETURN
-A fw_powersave -p tcp -m tcp --tcp-flags RST RST -j RETURN
-A fw_powersave -m owner --uid-owner 0-9999 -j RETURN
-A fw_powersave -j DROP
-A fw_standby -i lo -o lo -j RETURN
-A fw_standby -p tcp -m tcp --tcp-flags RST RST -j RETURN
-A natctrl_FORWARD -j DROP
-A st_clear_detect -m connmark --mark 0x2000000/0x2000000 -j REJECT --reject-with icmp-port-unreachable
-A st_clear_detect -m connmark --mark 0x1000000/0x1000000 -j RETURN
-A st_clear_detect -p tcp -m u32 --u32 "0x0>>0x16&0x3c@0xc>>0x1a&0x3c@0x0&0xffff0000=0x16030000&&0x0>>0x16&0x3c@0xc>>0x1a&0x3c@0x4&0xff0000=0x10000" -j CONNMARK --set-xmark 0x1000000/0x1000000
-A st_clear_detect -p udp -m u32 --u32 "0x0>>0x16&0x3c@0x8&0xffff0000=0x16fe0000&&0x0>>0x16&0x3c@0x14&0xff0000=0x10000" -j CONNMARK --set-xmark 0x1000000/0x1000000
-A st_clear_detect -m connmark --mark 0x1000000/0x1000000 -j RETURN
-A st_clear_detect -p tcp -m state --state ESTABLISHED -m u32 --u32 "0x0>>0x16&0x3c@0xc>>0x1a&0x3c@0x0&0x0=0x0" -j st_clear_caught
-A st_clear_detect -p udp -j st_clear_caught
-A st_penalty_log -j CONNMARK --set-xmark 0x1000000/0x1000000
-A st_penalty_log -j NFLOG
-A st_penalty_reject -j CONNMARK --set-xmark 0x2000000/0x2000000
-A st_penalty_reject -j NFLOG
-A st_penalty_reject -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Nov 17 10:02:12 2016
